--- a/intsureview_fe/src/App.css
+++ b/intsureview_fe/src/App.css
@@ -1,22 +1,15 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 100%;
   display: flex;
+  height: 100%;
+  flex-direction: column;
+  gap: 20px;
+}
+
+header {
+  display: flex;
+  width: 100%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -24,15 +17,25 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+main {
+  margin: auto;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer {
+  background-color: #964B00;
+  width: 100%;
+  height: 12%;
+  position: fixed;
+  bottom: 0;
+  color: white;
+  font-size: 25px;
+}
+
+.button {
+  margin: auto;
+  width: 150px;
 }
